test/shouldPass/expr/lessThanDouble.pas
program Sample;
var
  i : boolean = false;

begin
  i := 1.0 < 3.0;
  writeln(i)
end.
